# cmake-matlab-python-cpp-example

./: CMakeLists.txt  README.md  buildfile.m  git-submodule.sh  pyproject.toml
cmake/utils/: create_mex_file.py
include/: arrayProduct.h
src/: arrayProduct.cpp
src/arrayProduct/: __init__.py
src/binding/: bind_arrayProduct.cpp
src/mex/: mex_arrayProduct.cpp
tests/cpp/: test_arrayProduct.cpp
tests/matlab/: TestMex.m
tests/python/: test_arrayProduct.py
